# ros2_ex

./: README.md  repositories_setup.yaml
hoverboard/: CMakeLists.txt  package.xml
hoverboard/hoverboard_mvp/: path_controller.py
hoverboard/launch/: hoverboard.launch.py  localization_launch.py  navigation_launch.py  robot_simulation_launch.py  rviz_launch.py  spawn_robot.launch.py  spawn_squarbo.launch.py
hoverboard/params/: nav2_params.yaml
hoverboard/scripts/: path_controller_node.py  set_path.py
hoverboard/src/: mode_controller.cpp
hoverboard/urdf/: hoverboard.urdf
hoverboard_mvp/: CMakeLists.txt  package.xml
hoverboard_mvp/action/: GoHome.action
hoverboard_mvp/hoverboard_mvp/: path_controller.py
hoverboard_mvp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hoverboard_mvp/launch/: bringup_launch.py  hoverboard.launch.py  localization_launch.py  navigation_launch.py  robot_simulation_launch.py  slam_launch.py  spawn_mobile_robot.launch.py  spawn_robot.launch.py
hoverboard_mvp/log/: latest_build
hoverboard_mvp/maps/: empty.pgm  simple.pgm  simple.yaml
hoverboard_mvp/params/: nav2_multirobot_params_1.yaml  nav2_params.yaml
hoverboard_mvp/scripts/: path_controller_node.py
hoverboard_mvp/src/: mode_controller.cpp
hoverboard_mvp/urdf/: hoverboard.urdf  hoverboard.urdf.xacro
hoverboard_mvp/worlds/: diff_driver_robot.world  empty.world
robot_controller/: CMakeLists.txt  package.xml
robot_navigation/: CMakeLists.txt  package.xml
robot_simulation/: CMakeLists.txt  package.xml
ros2_ex/: CMakeLists.txt  package.xml
(+31 files in other folders)
